--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.0.4",
+        "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.38",
+        "tailwindcss": "^3.4.1",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "vue": "3.4",
+        "vue-loader": "^17.3.1",
+        "vue-router": "^4.0.13"
     }
 }
