--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "pinia": "^2.1.7",
         "vue": "3.4",
         "vue-loader": "^17.3.1",
         "vue-router": "^4.0.13"
