--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@vueuse/core": "^10.9.0",
         "pinia": "^2.1.7",
+        "typescript": "^5.4.3",
         "vue": "3.4",
         "vue-loader": "^17.3.1",
         "vue-router": "^4.0.13"
